manifests/cluster-addons/node-feature-discovery/templates/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: node-feature-discovery-gc
  namespace: node-feature-discovery
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: node-feature-discovery
      role: gc

  enableDefaultDeny:
    ingress: true
    egress: true

  ingress: []

  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: node-feature-discovery-worker
  namespace: node-feature-discovery
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: node-feature-discovery
      role: worker

  enableDefaultDeny:
    ingress: true
    egress: true

  ingress: []

  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: node-feature-discovery-master
  namespace: node-feature-discovery
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: node-feature-discovery
      role: master

  enableDefaultDeny:
    ingress: true
    egress: true

  ingress: []

  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP
